force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/event_id__c.field-meta.xml
<CustomField>
    <fullName>event_id__c</fullName>
    <description>Holds the event which holds these questions</description>
    <label>event_id</label>
    <referenceTo>RC_event__c</referenceTo>
    <relationshipLabel>RC_Event_Question_Test_Sets</relationshipLabel>
    <relationshipName>RC_Event_Question_Test_Sets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>