force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/is_attempted__c.field-meta.xml
<CustomField>
    <fullName>is_attempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_attempted</label>
    <type>Checkbox</type>
</CustomField>