force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/isStudentAnswerdCorrect__c.field-meta.xml
<CustomField>
    <fullName>isStudentAnswerdCorrect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isStudentAnswerdCorrect</label>
    <type>Checkbox</type>
</CustomField>