force-app/main/default/objects/RC_Event_Question_Test_Set__c/fields/question_image__c.field-meta.xml
<CustomField>
    <fullName>question_image__c</fullName>
    <label>question_image</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>