force-app/main/default/objects/RC_Event_Question_Test_Set__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>question_correct_answer__c</columns>
    <columns>question_category__c</columns>
    <columns>question_title__c</columns>
    <columns>option_1__c</columns>
    <columns>option_2__c</columns>
    <columns>option_3__c</columns>
    <columns>option_4__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>